# constrained-pnp

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  requirements.txt
.github/workflows/: build.yml
docs/: references.bib
include/: constrained_pnp.h
src/: constrained_pnp.cpp  constrained_pnp.py  photon_sim.py  planar_pnp.py  problem_setup.json  test.py
test/: Test_Pose.cpp
